# QNIPE

./: .clinerules  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_CONTEXT.md  PROJECT_STATUS.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  high_capacity.yaml  nisq_4096.yaml
data/raw/cover/: .gitkeep
docs/: architecture.md  theory.md
notebooks/: 01_preprocessing_demo.ipynb  02_quantum_encoding.ipynb  03_decoding_pipeline.ipynb  04_full_256x256_validation.ipynb
src/paqnipe/: __init__.py
src/paqnipe/classical/: __init__.py
src/paqnipe/classical/encoding/: __init__.py  activity_analyzer.py  adaptive_quantizer.py  normalization_engine.py  phase_encoder.py  secret_formatter.py
src/paqnipe/classical/preprocessing/: __init__.py  block_partitioner.py  image_loader.py
src/paqnipe/utils/: __init__.py  config_manager.py  logger.py
tests/unit/: test_config_manager.py  test_logger.py
tests/unit/classical/: test_block_partitioner.py  test_image_loader.py
